<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Dominus</string>
    <string name="gm_planets">Planets</string>
    <string name="intent_about">ua.org.antidotcb.dominus.intent.action.about</string>
    <string name="intent_loadgame">ua.org.antidotcb.dominus.intent.action.loadgame</string>
    <string name="intent_main">ua.org.antidotcb.dominus.intent.action.main</string>
    <string name="intent_newgame">ua.org.antidotcb.dominus.intent.action.newgame</string>
    <string name="intent_options">ua.org.antidotcb.dominus.intent.action.options</string>
    <string name="intent_savegame">ua.org.antidotcb.dominus.intent.action.savegame</string>
    <string name="loadgame_desc">Please, select game to load</string>
    <string name="loadgame_title">Load Game</string>
    <string name="mm_about">About...</string>
    <string name="mm_exitgame">Exit game</string>
    <string name="mm_loadgame">Load game</string>
    <string name="mm_newgame">New game</string>
    <string name="mm_next">Next</string>
    <string name="mm_options">Options</string>
    <string name="mm_savegame">Save game</string>
    <string name="mm_back">Back</string>
    <string name="mm_randomize">Randomize</string>
    <string name="app_version">1.0.1</string>
    <string name="app_Version">Version </string>
    <string name="about_copyright">All rights reserved © 2011 antidotcb</string>
    <string name="about_logo_cd">Game logo</string>
    <string name="ng_universedensity_cd">Control universe density</string>
</resources>
